--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -10,6 +10,10 @@ pl:
       update_request:
         email: NOTRANSLATE
         search_location: NOTRANSLATE
+      search_location:
+        latitude: 
+        longitude: 
+        query: 
     models:
       contact: NOTRANSLATE
       subscription: NOTRANSLATE
