--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -5,6 +5,10 @@ en:
         email: NOTRANSLATE
         message: NOTRANSLATE
         name: NOTRANSLATE
+      search_location:
+        latitude: NOTRANSLATE
+        longitude: NOTRANSLATE
+        query: NOTRANSLATE
       subscription:
         email: NOTRANSLATE
       update_request:
@@ -12,6 +16,7 @@ en:
         search_location: NOTRANSLATE
     models:
       contact: NOTRANSLATE
+      search_location: NOTRANSLATE
       subscription: NOTRANSLATE
       update_request: NOTRANSLATE
   cells:
@@ -1164,6 +1169,7 @@ en:
             family_children: for children and adolescents
             family_nuclear_family: for families
             family_parents: for parents
+            family_parents_to_be: for parents to be
             family_pregnant_woman: for pregnant women
             nuclear_family: for families
             parents: for parents
@@ -1821,9 +1827,9 @@ en:
     organizations: organizations
     preview: preview
     rechtliche-hinweise: legal-information
-    search_locations: 
+    search_locations: search_locations
     subscribe: subscribe
-    subscriptions: 
+    subscriptions: subscriptions
     ueber-uns: about-us
     unsubscribe: unsubscribe
     update_requests: update_requests
