--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -11,13 +11,14 @@ ru:
         email: NOTRANSLATE
         search_location: NOTRANSLATE
       search_location:
-        latitude: 
-        longitude: 
-        query: 
+        latitude: NOTRANSLATE
+        longitude: NOTRANSLATE
+        query: NOTRANSLATE
     models:
       contact: NOTRANSLATE
       subscription: NOTRANSLATE
       update_request: NOTRANSLATE
+      search_location: NOTRANSLATE
   cells:
     faq:
       heading: "Часто задаваемые вопросы"
@@ -886,6 +887,7 @@ ru:
             nuclear_family: "для семей"
             parents: "для родителей"
             pregnant_woman: "для беременных"
+            family_parents_to_be: "для будущих родителей"
       map_sidebar:
         map_output_searchresults: "Вывод результатов поиска на карту"
       noscript_warning: |
