--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -5,6 +5,10 @@ pl:
         email: NOTRANSLATE
         message: NOTRANSLATE
         name: NOTRANSLATE
+      search_location:
+        latitude: NOTRANSLATE
+        longitude: NOTRANSLATE
+        query: NOTRANSLATE
       subscription:
         email: NOTRANSLATE
       update_request:
@@ -12,6 +16,7 @@ pl:
         search_location: NOTRANSLATE
     models:
       contact: NOTRANSLATE
+      search_location: NOTRANSLATE
       subscription: NOTRANSLATE
       update_request: NOTRANSLATE
   cells:
@@ -68,7 +73,7 @@ pl:
           link_1:
             name: po prostu daj nam znać
             target: _blank
-            url: http://www.clarat.org/refugees/kontakt/new
+            url: http://www.clarat.org/pl/refugees/kontakt/nowe
             var: link_to_contact_form
           question: Czy clarat oferuje otwarty interfejs, który umożliwiłby dalsze wykorzystanie danych?
         question_2:
@@ -121,7 +126,7 @@ pl:
           link_3:
             name: kliknij tu
             target: _blank
-            url: http://www.clarat.org/ueber-uns
+            url: http://www.clarat.org/pl/refugees/o-nas
             var: link_to_about_us
           question: " Kto kryje się za claratem?"
       section_2:
@@ -890,6 +895,7 @@ pl:
             family_children: dla dzieci i młodzieży
             family_nuclear_family: dla rodzin
             family_parents: dla rodziców
+            family_parents_to_be: dla przyszłych rodziców
             family_pregnant_woman: dla kobiet w ciąży
             nuclear_family: dla rodzin
             parents: dla rodziców
@@ -909,8 +915,8 @@ pl:
         button: Szukaj
         loc_label: Gdzie
         loc_placeholder:
-          long: adres, dzielnica, miasto lub kod pocztowy
-          short: miasto, kod pocztowy, …
+          long: Berlin, Deutschland
+          short: Berlin
         query_label: Co
         query_placeholder:
           long: Oferty na temat …
@@ -1415,7 +1421,7 @@ pl:
     search_locations: wyszukaj
     subscribe: subscribe
     subscriptions: subskrypcje
-    ueber-uns: o nas
+    ueber-uns: o-nas
     unsubscribe: unsubscribe
     update_requests: odśwież
     users: użytkownicy
