--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -6,24 +6,19 @@ de:
         message: NOTRANSLATE
         name: NOTRANSLATE
       search_location:
-        latitude: NOTRANSLATE
-        longitude: NOTRANSLATE
-        query: NOTRANSLATE
+        latitude: Latitude
+        longitude: Longitude
+        query: Query
       subscription:
         email: NOTRANSLATE
       update_request:
         email: NOTRANSLATE
         search_location: NOTRANSLATE
-      search_location:
-        latitude: NOTRANSLATE
-        longitude: NOTRANSLATE
-        query: NOTRANSLATE
     models:
       contact: NOTRANSLATE
-      search_location: NOTRANSLATE
+      search_location: Search location
       subscription: NOTRANSLATE
       update_request: NOTRANSLATE
-      search_location: NOTRANSLATE
   cells:
     faq:
       heading: Häufige Fragen
@@ -1241,7 +1236,6 @@ de:
             nuclear_family: für Familien
             parents: für Eltern
             pregnant_woman: für Schwangere
-            family_parents_to_be: für werdende Eltern
       map_sidebar:
         map_output_searchresults: Kartenausgabe der Suchergebnisse
       noscript_warning: |
