--- a/config/locales/tr.yml
+++ b/config/locales/tr.yml
@@ -553,7 +553,7 @@ tr:
     mobile_filter: Sonuçları filtrele
     more_filter_options: Daha fazla filtre göster
     query_field:
-      example_placeholder: "örneğin %{word}"
+      example_placeholder: "örneğin %{word}…"
       placeholder_words:
         family:
         - Uyuşturucu
